--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <table cellspacing =20>
       <tr>
-        <td><img src="images/Amany.jpg" alt="amany"></td>
+        <td><img src="images/amany.jpg" alt="amany"></td>
         <td><h1>Amany Obeid</h1>
         <p><em>Founder and cto of the <strong><a href="https://www.appbrewery.co">App</a></strong></em></p>
         <p>
